Change weapon visibility property. Correct 'dialog' spelling error.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -237,11 +237,14 @@ footer p {
   padding: 0px;
 }
 
+
 .banjo-on {
   width: 150px;
   margin-left: -50px;
   border: 1px solid red;
-  display: none;
+  /* display: none; */
+  opacity: 0;
+  transition: opacity 0.15s;
 }
 
 .ginger-on {
@@ -249,6 +252,9 @@ footer p {
   width: 200px;
   margin-right: -70px;
   z-index: 1;
+  /* display: none; */ 
+  opacity: 0;
+  transition: opacity 0.15s;
 }
 
 .weapon-off {
@@ -264,7 +270,7 @@ button {
   font-size: 1.6rem;
 }
 
-.dialog {
+.dialogue {
   border: 2px solid black;
   width: 40%;
   margin: 0 auto;
@@ -272,6 +278,6 @@ button {
   padding: 10px 20px;
 }
 
-.dialog p {
+.dialogue p {
   font-size: 1.4rem;
 }
